// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionsWatchAddContainer should render PositionsWatchAddContainer correctly when NO positions are watched 1`] = `
<div
  className="position_watch_container"
>
  <div
    className="position_watch_widget"
  >
    <div
      className="position_watch_list__wrapper"
    >
      <Link
        className="nav_link"
        replace={false}
        to="/dashboard"
      >
        Back to Dashboard
      </Link>
      <PositionsList
        positions={
          Array [
            Object {
              "content": Object {
                "description": "first description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "first job id",
              "location": "first location",
              "positionId": "firstPositionId",
              "title": "first title",
            },
            Object {
              "content": Object {
                "description": "second description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "second job id",
              "location": "second location",
              "positionId": "secondPositionId",
              "title": "second title",
            },
          ]
        }
      />
    </div>
    <div
      className="position_watch_details__wrapper"
    >
      <Connect(PositionWatchAddDetails) />
    </div>
  </div>
</div>
`;

exports[`PositionsWatchAddContainer should render PositionsWatchAddContainer correctly when all positions are watched 1`] = `
<div
  className="position_watch_container"
>
  <div
    className="position_watch_widget"
  >
    <div
      className="position_watch_list__wrapper"
    >
      <Link
        className="nav_link"
        replace={false}
        to="/dashboard"
      >
        Back to Dashboard
      </Link>
      <PositionsList
        positions={Array []}
      />
    </div>
    <div
      className="position_watch_details__wrapper"
    >
      <Connect(PositionWatchAddDetails) />
    </div>
  </div>
</div>
`;

exports[`PositionsWatchAddContainer should render PositionsWatchAddContainer correctly when only one position is being watched 1`] = `
<div
  className="position_watch_container"
>
  <div
    className="position_watch_widget"
  >
    <div
      className="position_watch_list__wrapper"
    >
      <Link
        className="nav_link"
        replace={false}
        to="/dashboard"
      >
        Back to Dashboard
      </Link>
      <PositionsList
        positions={
          Array [
            Object {
              "content": Object {
                "description": "second description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "second job id",
              "location": "second location",
              "positionId": "secondPositionId",
              "title": "second title",
            },
          ]
        }
      />
    </div>
    <div
      className="position_watch_details__wrapper"
    >
      <Connect(PositionWatchAddDetails) />
    </div>
  </div>
</div>
`;

exports[`PositionsWatchAddContainer should render PositionsWatchAddContainer correctly when positions watched is not in positions list 1`] = `
<div
  className="position_watch_container"
>
  <div
    className="position_watch_widget"
  >
    <div
      className="position_watch_list__wrapper"
    >
      <Link
        className="nav_link"
        replace={false}
        to="/dashboard"
      >
        Back to Dashboard
      </Link>
      <PositionsList
        positions={Array []}
      />
    </div>
    <div
      className="position_watch_details__wrapper"
    >
      <Connect(PositionWatchAddDetails) />
    </div>
  </div>
</div>
`;
